--- a/CcumberAdvanceReport/pom.xml
+++ b/CcumberAdvanceReport/pom.xml
@@ -77,6 +77,17 @@
     <artifactId>selenium-chrome-driver</artifactId>
     <version>2.48.2</version>
 </dependency>
+<dependency>
+<groupId>com.aventstack</groupId>
+<artifactId>extentreports</artifactId>
+<version>3.0.6</version>
+</dependency>
+
+<dependency>
+<groupId>com.vimalselvam</groupId>
+<artifactId>cucumber-extentsreport</artifactId>
+<version>3.0.2</version>
+</dependency>
 		
 		
 		
